--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -3,12 +3,5 @@
      list-style: none;
      margin: 0;
      padding: 0;
-}
-.body{
-     position: absolute;
-     width: 1240px;
-     height: 1095px;
-     left: 100px;
-     top: 171px;
-      
+     text-decoration: none;
 }
