--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,22 +1,75 @@
 .kasa-home {
-          position: relative;
-          width: 1440px;
-          height: 1024px;
-
-          background: #FFFFFF;
-     h1{
-     color:rgb(182, 92, 185);
-     }
-     p{
-          color: rgb(145, 131, 134);
-     }
-     .body{
-          position: absolute;
-          width: 1240px;
-          height: 1095px;
-          left: 100px;
-          top: 171px; 
-     }
+     position: relative;
+     width: 1440px;
+     height: 1024px;
+     //background: #FFFFFF;
+     
+      
+    
+     
      
 }
+.kasa-home-section {
+     
+     position: absolute;
+     width: 1240px;
+     height: 1095px;
+     //left: 100px;
+     //top: 171px;
+     
+     h1{
+          position: absolute;
+          left: 25.9%;
+          right: 25.14%;
+          top: 24.32%;
+          bottom: 69.04%;
+          
+          font-family: 'Montserrat';
+          font-style: normal;
+          font-weight: 500;
+          font-size: 48px;
+          line-height: 142.6%;
+          /* or 68px */
+          
+          display: flex;
+          align-items: flex-end;
+          
+          color: #FFFFFF;
+          z-index: 1;
+     }
+    
+}    
+.kasa-home-section-mask{
+     position: absolute;
+     width: 1240px;
+     height: 223px;
+     left: 100px;
+     top: 171px;
+    
+     .img{
+          position: absolute;
+          width: 1278px;
+          height: 1933px;
+          left: 100px;
+          top: -573px;
+          border-radius: 25;
+     
+     }
+
+     
+
+}
+.kasa-home-section-gallery{
+     position: absolute;
+     width: 1240px;
+     height: 829px;
+     left: 100px;
+     top: 437px;
+    
+
+     background: #F7F7F7;
+     border-radius: 25px;
+
+}
+
 
