--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,11 @@
 @import "./settings";
 @import "./variables";
-@import "./app";
+@import "./navbar";
 @import "./header";
 @import "./footer";
 @import "./home";
 @import "./apropos";
 @import "./error";
 @import "./logement";
-@import "./navbar";
-@import "./logo";
+@import "./thumb";
+
