--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,31 +1,42 @@
 
 .kasa-footer{
-
+    
      position: relative;
      width: 1440px;
      height: 209px;
      background: #000000;
+    .kasa-footer-elements{
+          
+          img{
+               position: absolute;
+               left: 45.76%;
+               right: 45.76%;
+               top: 31.58%;
+               bottom: 49.55%;  
+               //align-items: center;
+          }
+          p{
+               position: absolute;
+               left: 32.15%;
+               right: 32.22%;
+               top: 64.11%;
+               bottom: 13.88%;
+
+               font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 500;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+
+               display: flex;
+               align-items:center;
+               text-align: center;
+               padding-left: 7%;
+               color: #FFFFFF;
+          }
+    }
     
-     p{
-          position: absolute;
-          left: 32.15%;
-          right: 32.22%;
-          top: 64.11%;
-          bottom: 13.88%;
-
-          font-family: 'Montserrat';
-          font-style: normal;
-          font-weight: 500;
-          font-size: 24px;
-          line-height: 142.6%;
-          /* or 34px */
-
-          display: flex;
-          align-items: flex-end;
-          text-align: center;
-
-          color: #FFFFFF;
-     }
      
 
 }
