--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -1,54 +1,66 @@
 .kasa-home-thumb{
-     height: 829px;
-width: 1240px;
-left: 100px;
-top: 437px;
-border-radius: 0px;
-
-     
-
-    
-   
+     //height: 829px;
+     height: 780px;
+     width: 1240px;
+     left: 100px;
+     top: 437px;
+     border-radius: 0px;
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     align-items: center;
+     row-gap: 60px;
+     gap: 60px;
+     padding: 20px;
+    // height: 50px;   
      border-radius: 25px;
+     padding-top:56px ;
+     padding-left: 50px;
+     
      
      .rectangle2{ 
 
           height: 340px;
-width: 340px;
-left: 0px;
-top: 0px;
-border-radius: 10px;
-
+          width: 340px;
+          left: 0px;
+          top: 0px;
+          border-radius: 10px;
           background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
           border-radius: 10px;
-          h3{
-               position: absolute;
-               left: 5.88%;
-               right: 5.88%;
-               top: 78.82%;
-               bottom: 5.88%;
-     
+         // width: 100%;
+          text-align:left; 
+          
+          h2{
+           
+
+               height: 52px;
+               width: 300px;
+               //left: 20px;
+               //top: 268px;
                font-family: 'Montserrat';
                font-style: normal;
                font-weight: 500;
                font-size: 18px;
                line-height: 142.6%;
                /* or 26px */
-     
-               display: flex;
-               align-items: flex-end;
-     
+              
+               margin-top: 60px;
+               margin-left: 20px;
+               margin-bottom: 20px;
+               margin-right: 20px;
+              
+
                color: #FFFFFF;
+
+
+
           }
-          .img{
-               position: absolute;
-               left: 0%;
-               right: 0%;
-               top: 0%;
-               bottom: 0%;
-               
-               background: #FF6060;
-               border-radius: 10px;  
+          img{
+              
+               border-radius: 10px;
+               width: 100%;
+            
+
           }     
      }
     
@@ -58,34 +70,23 @@ border-radius: 10px;
      flex-direction: row;
      align-items: center;
      padding: 20px;
-     height: 600px;
+     height: 50px;
+   
+   
+   
+   .item {
+    width: 100%;
+    text-align: center;
+
+    img {
+      width: 50%;
+    }
+
+    .title {
+      margin-top: 10px;
+    }
+  }
+  
    }
    
-   .image {
-     width: 80%;
-     height: auto;
-     border-radius: 10px;
-     box-shadow: 0 0 10px rgba(0,0,0,0.3);
-     margin-bottom: 20px;
-   }
-   
-   .buttons-container {
-     display: flex;
-     justify-content: center;
-   }
-   
-   .button {
-     width: 30px;
-     height: 30px;
-     border-radius: 50%;
-     border: none;
-     background-color: #ccc;
-     margin: 0 10px;
-     cursor: pointer;
-   }
-   
-   .button.active {
-     background-color: #333;
-     color: white;
-   }
    
