--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "./settings";
 @import "./variables";
+@import "./mixins";
 @import "./navbar";
 @import "./header";
 @import "./footer";
@@ -8,4 +9,5 @@
 @import "./error";
 @import "./logement";
 @import "./thumb";
+@import "./carousel";
 
