--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -23,34 +23,19 @@
 }
 
 .carousel-container {
-     position: absolute;
-     width: 1240px;
-     height: 415px;
-     left: 100px;
-     top: 128px;
-     text-align: center;
-     padding: 40px 0;
-   }
-   h1{
-     position: absolute;
-     left: 6.94%;
-     right: 48.96%;
-     top: 55.96%;
-     bottom: 39.06%;
-     
-     font-family: 'Montserrat';
-     font-style: normal;
-     font-weight: 500;
-     font-size: 36px;
-     line-height: 142.6%;
-     /* or 51px */
-     
-     display: flex;
-     align-items: flex-end;
-     
-     color: #FF6060;
-      
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  
+  //background: url(accomodation-1-3.jpg);
+  mix-blend-mode: normal;
+  border-radius: 25px;
+   
+   
 }
+
 .carousel-arrow-container img {
      width: 100%;
      max-width: 1240px;
@@ -64,7 +49,7 @@
      cursor: pointer;
      height: 79px;
      width: 46px;
-     top: 50%;
+     top: 30%;
      transform: translateY(-50%);
      z-index: 1;
      color: white;
@@ -73,12 +58,57 @@
      .carousel-arrow-container .MuiSvgIcon-root:first-child {
      left: 0;
      margin-left: 15px;
-     font-size:50px;
-     color:black;
+     
      }
      
      .carousel-arrow-container .MuiSvgIcon-root:last-child {
      right: 0;
-     color:black;
+    
      }
+ 
+.Carousel-title-location{
+  h1{
+    position: absolute;
+    //left: 6.94%;
+    left: -0.06%;
+    right: 48.96%;
+    top: 55.96%;
+    //bottom: 39.06%;
+    bottom: 24.06%;
+     
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 142.6%;
+    /* or 51px */
+        
+    display: flex;
+    align-items: flex-end;
+        
+    color: #FF6060;
+        
+  }
+  p{
+    position: absolute;
+    //left: 6.94%;
+    left: -0.06%;
+    right: 80.83%;
+    top: 60.94%;
+    //bottom: 36.52%;
+    bottom: 20.52%;
+ 
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 142.6%;
+    /* identical to box height, or 26px */
+  
+    display: flex;
+    align-items: flex-end;
+  
+    color:  #FF6060;
+  }
+}     
    
