--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -9,46 +9,19 @@
           top: 128px;
 
      }
-     .kasa-logement-body-host{
-          position: absolute;
-          width: 64px;
-          height: 64px;
-          left: 1273px;
-          top: 567px;
-
-          background: #C4C4C4;
-     }
-     .kasa-logement-body-rate{
-          position: absolute;
-          width: 196px;
-          height: 36px;
-          left: 1144px;
-          top: 652px;
-
-     }
+     
      .kasa-logement-body-carousel{
+          position: absolute;
+          left: 0%;
+          right: 0%;
+          top: 0%;
+          bottom: 0%;
+
+          //background: url(accomodation-1-3.jpg);
+          mix-blend-mode: normal;
+          border-radius: 25px;
           
           
-          p{
-               position: absolute;
-               left: 6.94%;
-               right: 80.83%;
-               top: 60.94%;
-               bottom: 36.52%;
-
-               font-family: 'Montserrat';
-               font-style: normal;
-               font-weight: 500;
-               font-size: 18px;
-               line-height: 142.6%;
-               /* identical to box height, or 26px */
-
-               display: flex;
-               align-items: flex-end;
-
-               color: #FF6060;
-
-          }
          
 
      }
