--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -30,6 +30,7 @@
           border-radius: 10px;
          // width: 100%;
           text-align:left; 
+         
           
           h2{
            
@@ -45,7 +46,8 @@
                line-height: 142.6%;
                /* or 26px */
               
-               margin-top: 60px;
+               //margin-top: 60px;
+               margin-top: -62px;
                margin-left: 20px;
                margin-bottom: 20px;
                margin-right: 20px;
@@ -53,13 +55,14 @@
 
                color: #FFFFFF;
 
-
-
           }
           img{
               
                border-radius: 10px;
                width: 100%;
+               height: 100%;
+               
+              
             
 
           }     
