--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -16,6 +16,10 @@
         top: 0%;
         bottom: 0%;
         z-index: 1;
+        opacity: 1;
+    }
+    .kasa-header-logomobile{
+        opacity: 0;
     }
      .kasa-header-nav nav{
        
@@ -71,38 +75,51 @@
         }
     }
 }
+
+//styles CSS pour les écrans de 720 pixels ou moins 
 @media (max-width: 375px){
-    /* styles CSS pour les écrans de 720 pixels ou moins */
     .kasa-header {
-    
         position: absolute;
         width: 335px;
         height: 47px;
         left: 20px;
         top: 20px;
-                
-       &_logo{
-        position: absolute;
-        left: 0%;
-        right: 56.72%;
-        top: 0%;
-        bottom: 0%;
+
+        .kasa-header-logo{
+            opacity: 0;
+        }
+               
+        .kasa-header-logomobile{
+            opacity: 1;
+            height: 47px;
+            width: 145px;
+        
+            position: absolute;
+            left: 0%;
+            right: 56.72%;
+            top: 0%;
+            bottom: 0%;
             z-index: 1;
         }
-         .kasa-header-nav nav{
-           
+        
+        .kasa-header-nav nav{          
             position: absolute;
             left: 58.21%;
+            //left: 137.21%;
             right: 0%;
-            top: 38.3%;
+            //top: 38.3%;
+            top: 52%;
             bottom: 25.53%;
-
-            z-index: 1;
+            height: 17px;
+            width: 140px;
+            //left: 195px;
+            //top: 18px;        
            
             .Accueil{
                 position: absolute;
-                left: 58.21%;
-                right: 24.18%;
+                //left: 58.21%;
+                left: 30%;
+                //right: 24.18%;
                 top: 38.3%;
                 bottom: 25.53%;
 
@@ -111,7 +128,7 @@
                 font-weight: 500;
                 font-size: 12px;
                 line-height: 142.6%;
-                /* or 17px */
+                //or 17px 
 
                 display: flex;
                 align-items: flex-end;
@@ -123,7 +140,7 @@
             }
             .Apropos{
                 position: absolute;
-                left: 78.81%;
+                //left: 78.81%;
                 right: 0%;
                 top: 38.3%;
                 bottom: 25.53%;
@@ -133,7 +150,7 @@
                 font-weight: 500;
                 font-size: 12px;
                 line-height: 142.6%;
-                /* or 17px */
+                // or 17px 
                 
                 display: flex;
                 align-items: flex-end;
@@ -148,7 +165,9 @@
     }
 
 
-  }    
+  }   
+  
+  
    
         
  
