--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -5,7 +5,9 @@
      width: 1440px;
      height: 209px;
      background: #000000;
-    .kasa-footer-elements{
+     top: 4333px;
+     
+     .kasa-footer-elements{
           
           img{
                position: absolute;
@@ -37,6 +39,50 @@
           }
     }
     
-     
+}
+//styles CSS pour les écrans de 720 pixels ou moins 
+@media (max-width: 375px){
+     .kasa-footer{
+    
+          height: 209px;
+          width: 375px;
+          top: 4333px;
+          border-radius: 0px;
+          position: relative;
+          background: #000000;
+         
+         .kasa-footer-elements{
+               
+               img{
+                    position: absolute;
+                    left: 33.87%;
+                    right: 33.6%;
+                    top: 29.67%;
+                    bottom: 51.46%;
+               }
+               p{
+                    position: absolute;
+                    left:  22%;
+                    right: -18.4%;
+                    top: 48.33%;
+                    bottom: 29.67%;
+
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 12px;
+                    line-height: 142.6%;
+                    /* or 17px */
+
+                    display: flex;
+                    align-items: flex-end;
+                    text-align: center;
+
+                    color: #FFFFFF;
+
+               }
+         }
+         
+     }     
 
 }
