--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,6 +1,6 @@
 @import "../styles/mixins.scss";
 .kasa-home {
-     @include pageLength();
+     @include pageLengthdesktop();
      
      
 }
@@ -16,15 +16,20 @@
 }    
 .kasa-home-body-section1{
      //position: absolute;
-     //width: 1240px;
-     //height: 223px;
-     //left: 100px;
-     //top: 171px;
+     width: 1240px;
+     height: 223px;
+     left: 100px;
+     top: 171px;
+     background: #F7F7F7;
+     //opacity: 0.3;
+     //background: #000000;
+     //mix-blend-mode: darken;
+     border-radius: 25px;
      h1{
           position: absolute;
           left: 21.9%;
           right: 25.14%;
-          top: 14.32%;
+          top: 9.32%;
           bottom: 86.04%;
 
           font-family: 'Montserrat';
@@ -38,31 +43,15 @@
           align-items: flex-end;
 
           color: #FFFFFF;
-
-
           z-index: 1;
      }
+    
+     img{
+          background: #000000;
+          mix-blend-mode: darken;
+         // background: #F7F7F7;
+          border-radius: 25px;
 
-     .kasa-home-body-section1-mask{
-          //position: absolute;
-          //width: 1240px;
-          //height: 223px;
-          //left: 100px;
-          //top: 171px;
-         
-          .img{
-               position: absolute;
-               width: 1278px;
-               height: 1933px;
-               left: 100px;
-               top: -573px;
-               border-radius: 25;
-              
-          
-          }
-     
-          
-     
      }
      
 
@@ -78,94 +67,72 @@
 
      background: #F7F7F7;
      border-radius: 25px;
-     overflow-y: scroll;
+     //overflow-y: scroll;
      
 }
 
 @media (max-width: 375px){
      .kasa-home {
-          position: relative;
-          width: 375px;
-          height: 812px;
-
+          @include pageLengthmobile();
      
-     
-          //background: #FFFFFF;
-          
-           
-         
-          
-          
      }
-     .kasa-home-section {
-        /*  
+     .kasa-home-body {
+   
           position: absolute;
-          width: 1240px;
-          height: 1095px;
-          left: 100px;
-          top: 171px;
-          */
-          position: absolute;
+          width: 336px;
+          height: 938px;
+          left: 20px;
+          top: 83px;
+             
+     }    
+     
+     .kasa-home-body-section1 { 
+          //position: absolute;
           width: 335px;
-          height: 805px;
-          left: 21px;
-          top: 216px;
-
-          
+          height: 111px;
+          left: 20px;
+          top: 83px;
+          border-radius: 10px;
+                    
           h1{
                position: absolute;
-               left: 25.9%;
-               right: 25.14%;
-               top: 24.32%;
-               bottom: 69.04%;
-               
+               left: 5%;
+               right: 32.53%;
+               top: 9.04%;
+               bottom: 91.05%;
                font-family: 'Montserrat';
                font-style: normal;
                font-weight: 500;
-               font-size: 48px;
-               line-height: 142.6%;
-               /* or 68px */
-               
+               font-size: 24px;
+               line-height: 100%;
+               //or 24px 
+
                display: flex;
                align-items: flex-end;
-               
+
                color: #FFFFFF;
                z-index: 1;
           }
+          .sectionimage{
+               
+               width: 100%;
+               height: 100%;
+               mix-blend-mode: darken;
+               background: #F7F7F7;
+               border-radius:10px;
+          }
          
      }    
-     .kasa-home-section-mask{
-          position: absolute;
-          width: 1240px;
-          height: 223px;
-          left: 100px;
-          top: 171px;
-         
-          .img{
-               position: absolute;
-               width: 1278px;
-               height: 1933px;
-               left: 100px;
-               top: -573px;
-               border-radius: 25;
-          
-          }
-     
-          
-     
-     }
+    
      .kasa-home-section-gallery{
+         //section 2 = gallery
           position: absolute;
-          width: 1240px;
-          //height: 829px;
-          height: 780px;
-          left: 100px;
-          top: 437px;
-         
-     
-          background: #F7F7F7;
-          border-radius: 25px;
-          overflow-y: scroll;
+          width: 335px;
+          height: 805px;
+          //left: 21px;
+          top: 133px;
+          left: 1px;
+          background-color: #FFFFFF;
           
      }
 
