--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -51,6 +51,8 @@
                margin-left: 20px;
                margin-bottom: 20px;
                margin-right: 20px;
+               display: flex;
+               align-items: flex-end;
               
 
                color: #FFFFFF;
@@ -76,8 +78,6 @@
      padding: 20px;
      height: 50px;
    
-   
-   
    .item {
     width: 100%;
     text-align: center;
@@ -92,5 +92,92 @@
   }
   
    }
+
+
+@media (max-width: 375px){
+  .kasa-home-thumb{
+    
+    position: absolute;
+    width: 335px;
+    height: 255px;
+    left: -21px;
+    top: 0px;
+    //top: 680px;
+    gap: 24px;
+    padding: 20px;
+    border-radius: 10px;
+    align-items: center;
    
+    .rectangle2{ 
+
+      width: 335px;
+      height: 255px;
+         left: 0px;
+         top: 0px;
+         border-radius: 10px;
+         background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+         border-radius: 10px;
+        // width: 100%;
+         text-align:left; 
+        
+         
+         h2{
+          
+
+              height: 52px;
+              width: 300px;
+              //left: 20px;
+              //top: 268px;
+              font-family: 'Montserrat';
+              font-style: normal;
+              font-weight: 500;
+              font-size: 18px;
+              line-height: 142.6%;
+              /* or 26px */
+             
+              //margin-top: 60px;
+              margin-top: -62px;
+              margin-left: 20px;
+              margin-bottom: 20px;
+              margin-right: 20px;
+             
+
+              color: #FFFFFF;
+
+         }
+         img{
+             
+              border-radius: 10px;
+              width: 100%;
+              height: 100%;
+              
+             
+           
+
+         }     
+    }
+   
+}
+.gallery-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px;
+    height: 50px;
+  
+  .item {
+   width: 100%;
+   text-align: center;
+
+   img {
+     width: 50%;
+   }
+
+   .title {
+     margin-top: 10px;
+   }
+ }
+ 
+  }
+}
    
