--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -120,6 +120,7 @@
                mix-blend-mode: darken;
                background: #F7F7F7;
                border-radius:10px;
+               background-size: cover;
           }
          
      }    
