--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -5,7 +5,10 @@
      width: 1440px;
      height: 209px;
      background: #000000;
-     top: 4333px;
+    
+     //top: 4333px;
+     top: 2269px;
+     
      
      .kasa-footer-elements{
           
@@ -43,12 +46,11 @@
 //styles CSS pour les écrans de 720 pixels ou moins 
 @media (max-width: 375px){
      .kasa-footer{
-    
+          position: relative;
           height: 209px;
           width: 375px;
-          top: 4333px;
-          border-radius: 0px;
-          position: relative;
+          top: 5000px;
+   
           background: #000000;
          
          .kasa-footer-elements{
