--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -3,7 +3,8 @@
      height: 780px;
      width: 1240px;
      left: 100px;
-     top: 437px;
+     //top: 437px;
+     top: auto;
      
      border-radius: 0px;
      display: flex;
@@ -17,6 +18,7 @@
      border-radius: 25px;
      padding-top:56px ;
      padding-left: 50px;
+     //overflow: scroll;
      
      
      .rectangle2{ 
@@ -71,27 +73,7 @@
      }
     
 }
-.gallery-container {
-     display: flex;
-     flex-direction: row;
-     align-items: center;
-     padding: 20px;
-     height: 50px;
-   
-   .item {
-    width: 100%;
-    text-align: center;
 
-    img {
-      width: 50%;
-    }
-
-    .title {
-      margin-top: 10px;
-    }
-  }
-  
-   }
 
 
 @media (max-width: 375px){
@@ -101,7 +83,7 @@
     width: 335px;
     height: 255px;
     left: -21px;
-    top: 0px;
+    //top: 0px;
     //top: 680px;
     gap: 24px;
     padding: 20px;
@@ -158,26 +140,6 @@
     }
    
 }
-.gallery-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 20px;
-    height: 50px;
-  
-  .item {
-   width: 100%;
-   text-align: center;
 
-   img {
-     width: 50%;
-   }
-
-   .title {
-     margin-top: 10px;
-   }
- }
- 
-  }
 }
    
