--- a/src/styles/_apropos.scss
+++ b/src/styles/_apropos.scss
@@ -1,8 +1,34 @@
 .kasa-apropos{
-     h1{
-     color:rgb(6, 121, 121);
+     @include pageLengthdesktop();
+     .kasa-apropos-section1{
+          position: absolute;
+          width: 1240px;
+          height: 223px;
+          left: 100px;
+          top: 152px;
+          background-size: cover;
+          overflow: hidden;
+          background: #1e1c1c3d;
+          
+          mix-blend-mode: darken;
+         
+          border-radius: 25px;
+
+
+   
+     .sectionimagekalen{
+          position: absolute;
+          width: 1240px;
+          height: 827px;
+          //left: 100px;
+          //top: -150px;
+          width: 100%;
+          mix-blend-mode: darken;
+          border-radius: 25px;
+          transform: translate(1px, -310px);
      }
-     p{
-          color: rgb(192, 34, 47);
+     .sectionimagegustavo{
+          display: none;
      }
+}
 }
