--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -9,6 +9,13 @@
      
      background: #FFFFFF;
 }
+@mixin pageLengthDaproposOpen{
+     position: relative;
+     width: 1440px;
+     height: 1333px;
+     
+     background: #FFFFFF;
+}
 @mixin pageLengthmobile{
      position: relative;
      width: 375px;
