--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -43,8 +43,8 @@
     }
     
 }
-//styles CSS pour les écrans de 720 pixels ou moins 
-@media (max-width: 375px){
+//styles CSS pour les écrans de 375 pixels ou moins 
+@media screen and (max-width: 375px){
      .kasa-footer{
           position: relative;
           height: 209px;
