--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -81,7 +81,7 @@
      border-radius: 25px; 
 }
 
-@media (max-width: 375px){
+@media screen and (max-width: 375px){
      .kasa-home {
           @include pageLengthmobile();
      
