--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -20,85 +20,18 @@
           //background: url(accomodation-1-3.jpg);
           mix-blend-mode: normal;
           border-radius: 25px;
-          
-          
-         
-
+     
      }
     
      .kasa-logement-body-content{
           position: absolute;
           width: 1240px;
           height: 101px;
-          left: 100px;
-          top: 670px;
-          .kasa-logement-body-content-tag{
-               position: absolute;
-               width: 115px;
-               height: 25px;
-               left: 100px;
-               top: 670px;
-               p{
-                    position: absolute;
-                    left: 34.78%;
-                    right: 35.65%;
-                    top: 12%;
-                    bottom: 8%;
-
-                    font-family: 'Montserrat';
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 14px;
-                    line-height: 142.6%;
-                    /* identical to box height, or 20px */
-
-                    text-align: center;
-
-                    color: #FFFFFF;
-
-               }
-               .rectangle3{
-                    position: absolute;
-                    left: 0%;
-                    right: 0%;
-                    top: 0%;
-                    bottom: 0%;
-
-                    background: #FF6060;
-                    border-radius: 10px;
-
-               }
-
-          }
-          .kasa-logement-body-content-dropdowopen{
-               position: absolute;
-               width: 582px;
-               height: 52px;
-               left: 100px;
-               top: 719px;
-               .rectangle4close{
-                    position: absolute;
-                    left: 0%;
-                    right: 0%;
-                    top: 0%;
-                    bottom: 0%;
-
-                    background: #FF6060;
-                    border-radius: 10px;
-               }
-               .rectangle4open{
-                    position: absolute;
-                    left: 0%;
-                    right: 0%;
-                    top: 80.77%;
-                    bottom: -459.62%;
-
-                    background: #F7F7F7;
-                    border-radius: 10px;
-               }
-
-          }
-
+          //left: 100px;
+          //top: 670px;
+          left: 0px;
+          top: 532px;
 
      }
 }
+
